--- a/app/src/main/res/layout/fragment_nine_scene.xml
+++ b/app/src/main/res/layout/fragment_nine_scene.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-  <include layout="@layout/fragment_eight_scene"/>
+  <include layout="@layout/drawer_content"/>
 
   <include layout="@layout/drawer_menu"/>
 
