NiceBar Part II

--- a/app/src/main/res/layout/fragment_bottom_bar.xml
+++ b/app/src/main/res/layout/fragment_bottom_bar.xml
@@ -10,11 +10,13 @@
   <com.aleksejantonov.motions.ui.bottombar.NiceBar
       android:id="@+id/bar"
       android:layout_width="match_parent"
-      android:layout_height="72dp"
+      android:layout_height="56dp"
       android:layout_gravity="bottom"
       app:backgroundTint="@color/colorPrimary"
       app:barBottomLeftRadius="16dp"
       app:barBottomRightRadius="16dp"
+      app:barIconsMode="full"
+      app:barIconsSideMargin="24dp"
       app:barTopLeftRadius="8dp"
       app:barTopRightRadius="8dp"
       app:fabAlignmentMode="start"
