--- a/app/src/main/res/layout/fragment_bottom_bar.xml
+++ b/app/src/main/res/layout/fragment_bottom_bar.xml
@@ -16,7 +16,7 @@
       app:barBottomLeftRadius="16dp"
       app:barBottomRightRadius="16dp"
       app:barIconsMode="full"
-      app:barIconsSideMargin="24dp"
+      app:barIconsSideMargin="60dp"
       app:barTopLeftRadius="8dp"
       app:barTopRightRadius="8dp"
       app:fabAlignmentMode="start"
@@ -27,7 +27,7 @@
       android:id="@+id/fab"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      app:fabSize="normal"
+      app:fabCustomSize="64dp"
       app:layout_anchor="@+id/bar"/>
 
 </android.support.design.widget.CoordinatorLayout>
