--- a/app/src/main/res/layout/fragment_bottom_bar.xml
+++ b/app/src/main/res/layout/fragment_bottom_bar.xml
@@ -12,18 +12,21 @@
       android:layout_width="match_parent"
       android:layout_height="56dp"
       android:layout_gravity="bottom"
-      app:backgroundTint="@color/colorPrimary"
+      app:backgroundTint="#ede7f6"
       app:barBottomLeftRadius="16dp"
       app:barBottomRightRadius="16dp"
-      app:barIconsMode="full"
+      app:barIconsMode="lottie"
       app:barIconsSideMargin="60dp"
       app:barTopLeftRadius="8dp"
       app:barTopRightRadius="8dp"
+      app:centerImageFile="lottie_white.json"
       app:centerImageRes="@drawable/ic_mic_white_24dp"
       app:fabAlignmentMode="center"
       app:fabCradleMargin="8dp"
       app:fabCradleRoundedCornerRadius="8dp"
+      app:leftImageFile="lottie.json"
       app:leftImageRes="@drawable/ic_clock_anim"
+      app:rightImageFile="lottie_camera.json"
       app:rightImageRes="@drawable/ic_motorcycle_white_24dp"/>
 
   <android.support.design.widget.FloatingActionButton
